# fetch_microchip-samd51-csp

./: CMakeLists.txt  README.md  bootloader.ld  samd51-csp.cmake
CMake/: CPM.cmake
ld/: memory.ld  samd51j19a_app_flash.ld  samd51j19a_boot_flash.ld  samd51j20a_app_flash.ld  samd51j20a_boot_flash.ld
ld/memory/: common.ld  samd51j19a.ld  samd51j20a.ld
ld/sections/: app.ld  boot.ld  common.ld
toolchain/: gccarmemb.cmake
